Having read README_NOW_dTV-Site-Editors.txt updated absolute path to /images to be ../images instead.

--- a/htdocs/russian/FAQ.htm
+++ b/htdocs/russian/FAQ.htm
@@ -315,9 +315,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>Что за беда с фиолетовыми полосами ("purple stripes") ?</h2>
       <p> Некоторые источники видеосигнала, будучи подлюченными к плате видеоввода и DScaler'у, 
         приводят к появленю горизонтальный цветных полос на картинке.
-      <p> Обратите внимание на <a href="/images/Mummy_MacrovisionOn.jpg">эту картинку</a> - в неё 
+      <p> Обратите внимание на <a href="../images/Mummy_MacrovisionOn.jpg">эту картинку</a> - в неё 
         добвлен сигнал Macrovision ("Макровижн"). На том же самом видеосигнале
-        <a href="/images/Mummy_MacrovisionOff.jpg">без защиты Macrovision</a> 
+        <a href="../images/Mummy_MacrovisionOff.jpg">без защиты Macrovision</a> 
         таких полос не видно. 
       <p> Это явление, как правило, наблюдается при оцифровке видеосигнала с защитой от
 	  копирования Macrovision некоторыми платами видеоввода. Однако были случаи появления
