--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -59,9 +59,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
         the latest release source zipped. In addition to the latest release source, 
         you may be interested in reviewing the latest beta source, updated from 
-        CVS four times daily (<a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dscalermodule.zip">application</a>, 
-        <a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip"> 
-        Test DirectShow filter</a>).</p>
+        CVS four times daily (<a href="/downloads/dscalermodule.zip">application</a>, 
+        <a href="/downloads/directshowmodule.zip">test deinterlace DirectShow 
+        module</a>).</p>
       <p>The source compiles under MS Visual C++ 6.0. The application has grown 
         out of the GPL code base of MultiDec and MoreTV, two cable descrambling 
         programs.&nbsp; By combining the GPL parts of both and extending them 
@@ -79,10 +79,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p><a href="http://sourceforge.net/mail/?group_id=7420">Mailing List</a></p>
       <p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse 
         CVS Repository</a> </p>
-      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dscalermodule.zip">Application 
-        Source Zip</a></p>
-      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip">Test 
-        DirectShow Filter Source Zip</a></p>
+      <p><a href="/downloads/dscalermodule.zip">Application Source Zip</a></p>
+      <p><a href="/downloads/directshowmodule.zip">Test Deinterlace DirectShow 
+        Module Source Zip</a></p>
       <h2><br>
         Deinterlace Project Developer Resources</h2>
       <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
