--- a/htdocs/russian/FAQ.htm
+++ b/htdocs/russian/FAQ.htm
@@ -30,7 +30,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160" rowspan="2"><img src="../images/dscalerlogo.jpg" alt="Логотип DScaler"></td>
-    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"></font></font></b><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="francais/FAQ.htm"><img src="../images/selector-french.gif" width="50" height="18" border="0"></a></font></font></b><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="portuguese/PortugueseFAQ.htm"><img src="../images/selector-portuguese.gif" width="60" height="18" border="0"></a></font></font></b></font></font></b><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="../FAQ.htm"><img src="../images/selector-english.gif" width="45" height="18" border="0"></a><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><img src="../images/selector-russian.gif" width="45" height="18" border="0"></font></font></b></font></font></b></font></font></b></font><!-- #EndEditable --></font></b></font></td>
+    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"></font></font></b><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="../francais/FAQ.htm"><img src="../images/selector-french.gif" width="50" height="18" border="0"></a></font></font></b><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="../portuguese/PortugueseFAQ.htm"><img src="../images/selector-portuguese.gif" width="60" height="18" border="0"></a></font></font></b></font></font></b><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="../FAQ.htm"><img src="../images/selector-english.gif" width="45" height="18" border="0"></a><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><img src="../images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><img src="../images/selector-russian.gif" width="45" height="18" border="0"></font></font></b></font></font></b></font></font></b></font><!-- #EndEditable --></font></b></font></td>
   </tr>
   <tr> 
     <td colspan="2" align="right" valign="bottom"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->FAQ&nbsp;<!-- #EndEditable -->&nbsp;</b></font></td>
@@ -88,8 +88,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 	  слово "dTV" - теперь его следует читать "DScaler".
       </p>
       <h2>Кто это сделал ?</h2>
-      <p>Смотрите страничку <a href="Authors.htm">Авторы</a> - там перечислены имена
-	  основных разработчиков, <a href="Thanks.htm">Благодарности</a> - имена тех, кто помог
+      <p>Смотрите страничку <a href="../Authors.htm">Авторы</a> - там перечислены имена
+	  основных разработчиков, <a href="../Thanks.htm">Благодарности</a> - имена тех, кто помог
 	  DScaler'у добиться успеха.</p>
       <h2>Сколько стоит DScaler ?</h2>
       <p> $1000 (плюс налоги) :-) Шутка. DScaler распространяется совершенно бесплатно
@@ -203,7 +203,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> Конечно существует. DScaler разрабатывается людьми, которые используют его преимущественно
 	  как процессор аналогового сигнала для проектора, и естественно они предпочитают использовать
       DScaler с "лентяйки" развалившись на диванчике, чем сидя скрючившись перед монитором ;-) 
-      <p> В DScaler'е предусмотрены <a href="keyboard.htm">управление кнопочками с клавиатуры</a> 
+      <p> В DScaler'е предусмотрены <a href="../keyboard.htm">управление кнопочками с клавиатуры</a> 
         для всех основных настроек, так что можно все делать быстро.<br>
         Более того, мы рекомендуем <a href="http://www.girder.nl">Girder</a> 
         от Ron Bessems как лучший инструмент для удаленного управления компьютером.
@@ -349,7 +349,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 		при изменении размеров окна видео или переходе из полноэкранного режима в окно.
 		Глубина цвета, разрешение и частота обновления дисплея тоже к этому каким-то образом причастны.
       <h2>Все равно не работает</h2>
-      <p>Смотрите <a href="user_support.htm">Поддержку пользователей</a>. Там указаны адреса тех,
+      <p>Смотрите <a href="../user_support.htm">Поддержку пользователей</a>. Там указаны адреса тех,
 	  кого нужно доставать.</p>
       <a name="HELP"></a> 
       <h1>Чем я могу помочь ?</h1>
@@ -369,7 +369,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> Если у вас есть какие-то соображения или желание реализовать что-либо из
         <a href="http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">Списка 
         задач</a>, подписывайтесь на <a href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">список 
-        рассылки</a>. Вся информация для успешного старта находится на <a href="developers.htm">странице 
+        рассылки</a>. Вся информация для успешного старта находится на <a href="../developers.htm">странице 
         разработчика</a>. 
       <!-- #EndEditable --> </td>
   </tr>
@@ -386,14 +386,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="index.php" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a> 
-        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a> 
-        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a> 
-        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="../index.php" class="bottommenu">home</a> | <a href="../about.htm" class="bottommenu">about</a> 
+        | <a href="../Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
+        | <a href="../downloads.htm" class="bottommenu">download</a> | <a href="../Authors.htm" class="bottommenu">authors</a> 
+        | <a href="../Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="../setup/index.htm" class="bottommenu">setup</a> | <a href="../keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a> 
-        | <a href="Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="../FAQ.htm" class="bottommenu">faq</a> | <a href="../developers.htm" class="bottommenu">developers</a> 
+        | <a href="../Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
