--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -42,14 +42,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <H1>DScaler - version 3.0.0</H1>
       <P>What's new:<br>
-      <font size="2">&nbsp;&nbsp; Massive improvements to 2:2 pulldown
+      &nbsp;&nbsp; Massive improvements to 2:2 pulldown
       detection.<br>
       &nbsp;&nbsp; Improvements to 3:2 pulldown detection on material with bad
       cadence.<br>
       &nbsp;&nbsp; New mixer control for users not bypassing the PC with sound.<br>
       &nbsp;&nbsp; Channel editing with fine tuning<br>
-      </font>&nbsp;&nbsp; <font size="2">New UI support for all most ini file
-      settings&nbsp;<br>
+      &nbsp;&nbsp; New UI support for all most ini file
+      settings<br>
       &nbsp;&nbsp; Greedy 2 frame improved (by fixing glaring bug).<br>
       &nbsp;&nbsp; Overlay fixes.<br>
       &nbsp;&nbsp; Improved auto-aspect ratio detect.<br>
@@ -63,10 +63,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp; NTSC50 mode for Chris Williams<br>
       &nbsp;&nbsp; Always on top full screen flag<br>
       &nbsp;&nbsp; Gamma filter fixed<br>
-      </font>&nbsp;&nbsp; Various <font size="2">Bug Fixes<br>
+      &nbsp;&nbsp; Various Bug Fixes<br>
       &nbsp;&nbsp; French code page for teletext&nbsp;<br>
-      </font>&nbsp;&nbsp; <font size="2">More flexible zoom and positioning<br>
-      &nbsp;&nbsp; Alpha Logo Killer plug-in</font>
+      &nbsp;&nbsp; More flexible zoom and positioning<br>
+      &nbsp;&nbsp; Alpha Logo Killer plug-in
+      &nbsp;&nbsp; Alpha Sharpness Filter
+      &nbsp;&nbsp; Tom Barry's new all-singing all-dancing Greedy High Motion plugin
       </P>
       <H2>License:</H2>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
