Reporting in French the latest updates ; 30/08 Yvonus . Added the "Troubleshooting>What is the crashlog.txt file ?" . Added the "Where can I download DScaler ?" (Attention ; the link is an absolute one to dscaler.org/dl .. just in case the page would be mirrored on another site of if provided as a file) . Changing the "Who made what ?" by "History of DScaler"

--- a/htdocs/francais/FAQ.htm
+++ b/htdocs/francais/FAQ.htm
@@ -81,13 +81,45 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         sur le site, vous trouverez encore certainement de veilles r&eacute;f&eacute;rences 
         &agrave; l'ancien nom mais nous vous conseillons d'utiliser dor&eacute;navant 
         ce nouveau nom. </p>
-      <h2>Qui fait quoi ?</h2>
+      <h2>Historique de DScaler</h2>
+      <p>Tout a commenc&eacute; en juillet 2000. En introduction, le post de Cliff 
+        Watson pr&eacute;sentant un historique du pchc dans &quot;<a href="http://www.avsforum.com/ubb/Forum12/HTML/012706.html#7">Who 
+        are the pioneers of htpc ?</a>&quot;. Ali, l'un des premiers adeptes du 
+        pchc, faisait la l'&eacute;loge d'une application ; <a href="http://www.borgtech.org/">BorgTV</a> 
+        (ou bTV) qui lui permettait de d&eacute;sentrelacer certaines sources 
+        analogiques avec un niveau de qualit&eacute; jamais atteint. Gr&acirc;ce 
+        ) certains posts comme &quot;<a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010102-12-002950.html">Not 
+        so bad analog video deinterlacing with htpc</a>&quot;, un certain nombre 
+        de personnes se sont int&eacute;ress&eacute;es au sujet. Parmi elles ; 
+        <a href="../Authors.htm">John Adcock</a>.</p>
+      <p>Il publia un plugin pour bTV qui permettait de d&eacute;sentrelacer suivant 
+        le mod&egrave;le 2:2 des films PAL. Ceci permis de montrer que le d&eacute;sentrelacement 
+        de telles sources &eacute;tait possible sans l'assistance de mat&eacute;riel 
+        (voir &quot;<a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010102-12-003461.html">John 
+        Adock's great PALMovie plugin</a>&quot;).</p>
+      <p>Le manque de support du format NTSC dans bTV rendait l'im&eacute;plementation 
+        du complexe algorithme de s&eacute;quencement 3:2 a oblig&eacute; John 
+        a &eacute;crire sa propre application bas&eacute;e sur Multidec. Son nom, 
+        bas&eacute; sur l'application d'ou il a pris son inspiration ; dTV (voir 
+        &quot;<a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010714-12-003790.html">First 
+        Version of NTSC/PAL TV deinterlacing program</a>&quot;).</p>
+      <p>Ceci apporta la preuve que de telles techniques complexes de d&eacute;sentrelacement 
+        &eacute;tait faisables en temps r&eacute;el et sans l'ajout de mat&eacute;riel 
+        d&eacute;di&eacute;. Depuis lors, de plus en plus d'utilisateurs (et de 
+        dev&eacute;loppeurs) ont rejoint les rangs de dTV et l'utilisent dans 
+        leur pchc plut&ocirc;t que d'utiliser un doubleur externe.</p>
+      <p>En mai 2001, <a href="http://www.avsforum.com/ubb/Forum12/HTML/010323.html">dTV 
+        a &eacute;t&eacute; renomm&eacute; en DScaler</a> afin d'&eacute;viter 
+        toute confusion avec la t&eacute;l&eacute;vision num&eacute;rique (en 
+        Anglais, Digital TeleVision ; DTV) qui prenait alors de plus en plus d'ampleur.</p>
       <p>Voyez le fichier <a href="../Authors.htm">Auteurs</a> pour la liste des 
         principaux d&eacute;veloppeurs ainsi que la liste des <a href="../Thanks.htm">remerciements</a> 
         pour quelques noms de personnes qui contribuent au succ&egrave;s de DScaler.</p>
       <h2>Combien co&ucirc;te DScaler ?</h2>
       <p>5000 FF (HT) :-) Non bien sur, DScaler est totalement gratuit, issue 
         de l'<i>open source</i>, est r&eacute;gie par la licence GPL.</p>
+      <h2>Ou puis-je t&eacute;l&eacute;charger DScaler ?</h2>
+      <p>Sur le site de DScaler, dans la page de <a href="http://www.dscaler.org/downloads.htm">t&eacute;l&eacute;chargement</a>.</p>
       <p> 
       <p> 
       <h1>Points généraux</h1>
@@ -164,13 +196,13 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         grand nombre de sociétés ont fabriqué des cartes sur ce modèle. 
       <p>Le son depuis le tuner ne fonctionne pas syst&eacute;matiquement, et 
         le support de l'ensemble des combinaisons de cartes et de tuner n'est 
-        pas une priorit&eacute;.
+        pas une priorit&eacute;. 
       <p> Malgré le fait que nous sommes assez incapables de vous dire quelles 
         cartes sont les meilleures, voici une petite sélection de cartes qui sont 
         utilisées avec succès par un certain nombre d'utilisateurs ; 
       <p> 
       <ul>
-        <li>Zoltrix Genie TV <a href="http://www.zoltrix-int.com/products/video/8MMZXGENIE.htm">http://www.zoltrix-int.com/products/video/8MMZXGENIE.htm</a>
+        <li>Zoltrix Genie TV <a href="http://www.zoltrix-int.com/products/video/8MMZXGENIE.htm">http://www.zoltrix-int.com/products/video/8MMZXGENIE.htm</a> 
         <li>The WinTV series from Hauppage <a href="http://www.hauppage.com/html/products.htm">http://www.hauppage.com/html/products.htm</a> 
         <li>Guillemot maxi video 3 <a href="http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html">http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html</a> 
         <li>The Pinacle Studio PCTV <a href="http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6">http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6</a> 
@@ -258,7 +290,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         de DScaler, ou lorsqu'on le fait passer du mode fenêtre au mode plein 
         écran. Le nombre de couleurs, la fréquence de rafraîchissement ainsi que 
         la taille du bureau Windows ont peut être une influence sur ce problème. 
-        <br>
+      <h2>Qu'est ce que le fichier &quot;crashlog.txt&quot;, et ou puis-je le 
+        trouver ?</h2>
+      <p>Si l'un des d&eacute;veloppeurs vous demande le fichier crashlog.txt, 
+        vous devriez le trouver dans le r&eacute;pertoire ou DScaler a &eacute;t&eacute; 
+        install&eacute;. Il contient des informations utiles qui peuvent &ecirc;tre 
+        utilis&eacute;es pour localiser plus facilement certains bugs. Si vous 
+        n'en trouvez pas, ne vous inqui&eacute;tez pas ; informez le d&eacute;veloppeur 
+        qu'il n'y en a pas. Enfin, si vous avez ce fichier mais n'observez pas 
+        de probl&egrave;mes, vous pouvez l'ignorer sans soucis.
+      <p><br>
       <p><a name="HELP"></a> 
       <h1>Comment puis je contribuer ?</h1>
       <p> 
@@ -280,7 +321,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         chose qui se trouve déjà dans la <a href="../Todo.htm">liste des choses 
         à faire</a>,prenez contact avec les auteurs et rejoignez la <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a> de développement de DScaler. Toutes les informations sur la <a href="developers.htm">page 
-        des d&eacute;veloppeurs</a>.
+        des d&eacute;veloppeurs</a>. 
       <p> 
       <!-- #EndEditable --></td>
   </tr>
